# yt-artist

./: .gitignore  CLAUDE.md  README.md  USER_GUIDE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  researcher.md  test-runner.md
.claude/commands/: add-command.md  add-feature.md  add-table.md  adr.md  checkpoint.md  memory-update.md  parking-lot.md  review.md  status.md  test.md  worktree.md
.claude/hooks/: block-dangerous.sh  post-edit-format.sh  session-start.sh
.claude/rules/: database.md  python-source.md  testing.md
baml_src/: clients.baml  score.baml  summarize.baml
claude/: ARCHITECTURE_DIAGRAMS.md
docs/: ARCHITECTURE_DIAGRAMS.md  JOURNEY.md  PARKING_LOT.md  SESSION_SUMMARY.md
docs/adr/: 00-INDEX.md  (+15 more)
scripts/: install-mac.sh  monitor.sh  yt-artist.sh
tests/: conftest.py  test_background_jobs.py  test_chunked_summarize.py  test_cli.py  test_config.py  test_dry_run.py  test_ensure_artist_video.py  test_exporter.py  test_fetcher.py  test_fts_search.py  test_hashing.py  test_jobs.py  test_json_output.py  test_ledger.py  test_llm_connectivity.py  test_onboarding.py  test_parallel.py  test_paths.py  test_pipeline.py  test_prompts.py  test_r10_llm_config.py  test_r13_template.py  test_r1_fk_enforcement.py  test_r4_transaction.py  test_r5_channel_url.py  test_r8_empty_summary.py  test_rate_limit.py  test_scorer.py  test_status.py  test_storage.py  test_summarizer.py  test_transcriber.py  test_transcript_quality.py  test_url_validation.py  test_ux_improvements.py  test_vtt_dedup.py  test_vtt_parser.py  test_yt_dlp_util.py
(+27 files in other folders)
